tests/syntax_error/c_and.jou
def foo() -> None:
    if x && y:  # Error: use 'and' instead of '&&'
        pass
